force-app/main/default/objects/Account/fields/SAP_BP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_BP_Number__c</fullName>
    <description>Joins Salesforce Account to the corresponding Business Partner record in SAP S/4HANA. Populated either manually (legacy data) or via the nightly SAP Customer Master sync (SapCustomerMasterSyncService — ADR-027). External id with unique constraint so the upsert key is enforced at the DB layer. Production target: SAP BP is the master, SF Account fields are downstream mirror — sales reps edit Account only via "Request Customer Master Update" workflow that fires an SAP IDoc (per ADR-021 production target).</description>
    <externalId>true</externalId>
    <label>SAP BP Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>