force-app/main/default/objects/Account/fields/SAP_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Category__c</fullName>
    <description>SAP BusinessPartnerCategory code (1 = Person, 2 = Organization, 3 = Group). Captured from API_BUSINESS_PARTNER so SF can see what BP type this Account corresponds to. Most B2B Accounts are Category 2; personal accounts created via Web-to-Lead or self-service portal would be Category 1.</description>
    <label>SAP Customer Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>