force-app/main/default/objects/Account/fields/SAP_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Group__c</fullName>
    <description>SAP BusinessPartnerGrouping code (e.g. BP01, BP02, BP03). Determines pricing terms, payment conditions, credit limits in SAP. Surfaces in SF so reps can see customer tier at a glance without jumping to SAP. Pure mirror — SF never writes this back to SAP.</description>
    <label>SAP Customer Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>