force-app/main/default/objects/Account/fields/SAP_Last_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>SAP_Last_Synced_At__c</fullName>
    <description>Timestamp of the last SapCustomerMasterSyncService run that touched this Account record. Used by Integration Health dashboard to spot stale customer data and by audit reports to verify the nightly sync ran. Null = never synced from SAP (Account is either SF-only legacy data or never matched a BP).</description>
    <label>SAP Last Synced At</label>
    <type>DateTime</type>
</CustomField>